--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <link rel = "icon" href = "Resource/vendors/img/Shiroheart.png" type = "image/x-icon"> 
         <link rel="stylesheet" href="Resource/vendors/css/styles.css"> 
         <link rel="stylesheet" href="Resource/vendors/css/grid.css">
+        <link rel="stylesheet" href="/Resource/vendors/css/queries.css">
         <title>Shiro</title>
         <!-- <script src="https://kit.fontawesome.com/a184e150a5.js" crossorigin="anonymous"></script> -->
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384- fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
