--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta name="description" content="Waifu">
         <meta name="keywords" content="Shiro,shiro">
         <meta name="author" content="frostpixel">
+        <link rel="stylesheet" media="all and (orientation:portrait)" href="portrait.css">
         <link rel = "icon" href = "Resource/vendors/img/Shiroheart.png" type = "image/x-icon"> 
         <link rel="stylesheet" href="Resource/vendors/css/styles.css"> 
         <link rel="stylesheet" href="Resource/vendors/css/grid.css">
