--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
                 </div>
             </div>
         </header>
-
+        <!-- test-->
+        <!-- hitwebcounter Code START -->
+<a href="https://www.hitwebcounter.com" target="_blank">
+<img src="https://hitwebcounter.com/counter/counter.php?page=7706573&style=0001&nbdigits=5&type=page&initCount=0" title="Total Website Hits" Alt="Web Hits"   border="0" /></a>         
         <!-- Other -->
         <section class="other">
             <div class="row">
