feat: add my personal portfolio

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Personal portfolio - [Your Name]" />
+    <meta name="description" content="Bach Ngoc Minh Chau - Software Engineer | Edge AI & Embedded Systems" />
     <meta name="theme-color" content="#0a0a0f" />
     
     <!-- Fonts -->
@@ -12,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
     
-    <title>Frostpixel | Portfolio</title>
+    <title>FrostPixel</title>
   </head>
   <body>
     <div id="root"></div>
